deploy-heimdall-dashboard/manifest/_heimdall-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: heimdall
  labels:
    app: heimdall
