deploy-heimdall-dashboard/manifest/heimdall-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: heimdall-service    # < name of the service
  namespace: heimdall       # < namespace where place the deployment and pods
spec:
  selector:
    app: heimdall  
  externalTrafficPolicy: Local
  type: LoadBalancer
  loadBalancerIP: 192.168.0.250
  ports:
    - name: http-80
      protocol: TCP
      port: 80
    - name: https-443
      protocol: TCP
      port: 443
